--- a/package.json
+++ b/package.json
@@ -15,13 +15,26 @@
     "build-cf-types": "wrangler types"
   },
   "dependencies": {
+    "@conform-to/react": "^1.0.6",
+    "@conform-to/zod": "^1.0.6",
+    "@prisma/adapter-d1": "^5.12.1",
+    "@prisma/client": "^5.12.1",
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "autoprefixer": "^10.4.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.365.0",
     "miniflare": "^3.20231030.4",
+    "prisma": "^5.12.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-radix": "^2.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240405.0",
@@ -37,10 +50,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "node-fetch": "^3.3.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.24.0"
+    "wrangler": "^3.48.0"
   },
   "engines": {
     "node": ">=18.0.0"
