--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts --clean",
     "dev": "tsup src/index.ts --format esm --watch",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit"
   },
@@ -36,17 +38,17 @@
     "@modelcontextprotocol/sdk": "^1.18.0"
   },
   "dependencies": {
-    "@streamfold/rotel": "latest",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/sdk-trace-node": "^1.25.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.52.0",
+    "@opentelemetry/resources": "^1.25.0",
+    "@opentelemetry/sdk-trace-node": "^1.25.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
-    "@opentelemetry/resources": "^1.25.0"
+    "@streamfold/rotel": "latest"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.18.0",
+    "@vitest/ui": "^2.1.9",
     "tsup": "^8.0.0",
-    "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "vitest": "^2.1.9"
   }
 }
