--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "pnpm -r build",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
-    "dev": "pnpm -r --parallel dev"
+    "dev": "pnpm -r --parallel dev",
+    "release:patch": "cd packages/mcp && npm version patch && git push origin main && git push origin --tags",
+    "release:minor": "cd packages/mcp && npm version minor && git push origin main && git push origin --tags",
+    "release:major": "cd packages/mcp && npm version major && git push origin main && git push origin --tags"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
